<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bnv_shared_preferences">Shared Preferences</string>
    <string name="bnv_sql_database">Sql Database</string>
    <string name="bnv_firebase_storage">Firebase Storage</string>
    <string name="bnv_room_database">Room Database</string>
    <string name="bnv_file_storage">File Storage</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_author">Delete Author</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="toolbar_title_update">Update</string>
    <string name="toolbar_title_add">Add News</string>
    <string name="default_error_msg">An error occurred</string>
    <string name="error_empty_input">Empty input field</string>
    <string name="authors">Authors</string>
</resources>
